# agent-flow

./: .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml
examples/: code-review-agent.ts  data-analysis-agent.ts  research-agent.ts
python/: pyproject.toml
python/agent_flow/: __init__.py  agent.py  tool.py  types.py
python/agent_flow/tools/: __init__.py  calculator.py  web_search.py
python/tests/: test_calculator.py  test_tool_decorator.py
src/: index.ts
src/core/: agent.ts  index.ts  tool-builder.ts  types.ts
src/memory/: conversation.ts  index.ts  store.ts  working.ts
src/providers/: anthropic.ts  base.ts  index.ts  openai.ts
src/schemas/: converter.ts
src/tools/: calculator.ts  file-ops.ts  http-request.ts  index.ts  web-search.ts
src/ui/: index.html  package-lock.json  package.json
src/ui/src/: App.tsx  index.css  types.ts
src/ui/src/components/: ExecutionPanel.tsx  Header.tsx  ToolPanel.tsx  WorkflowCanvas.tsx
src/utils/: logger.ts  rate-limiter.ts  retry.ts
tests/: agent.test.ts  memory.test.ts  rate-limiter.test.ts  schema.test.ts  tools.test.ts
