[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-flow"
version = "1.0.0"
description = "Python SDK for building agentic AI workflows"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "George Castillo"}]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "pydantic>=2.9.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.37.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
